kube/client-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: client-pod
  labels:
    component: web
spec:
  containers:
    - name: client
      image: downer/fibber-client
      ports:
        - containerPort: 3000
      imagePullPolicy: "Always"
