kube/server-deployment.yaml
apiVersion: apps/v1

kind: Deployment

metadata:
  name: server-deployment

spec:
  replicas: 4

  selector:
    matchLabels:
      component: server

  template:
    metadata:
      labels:
        component: server
    
    spec:
      containers:
        - name: server
          image: downer/fibber-server
          ports:
            - containerPort: 5000
