kube/client-node-port.yaml
apiVersion: v1
kind: Service
metadata:
  name: client-node-port
spec:
  type: NodePort
  ports:
    - port: 3050 # port that other pods point to
      targetPort: 3000 # pod that this nodeport is sending traffic to
      nodePort: 31515 # publicly open port (put this in the browser)
  selector:
    component: web
